@@ -6,7 +6,7 @@ RUN apt-get -y install apt-utils aptitude git curl net-tools iputils-ping tcpdum
 RUN apt-get -y install python3 python3-pip virtualenv
 RUN apt-get -y install jq evince vim
 
-RUN pip3 install bs4 termcolor
+RUN pip3 install bs4 termcolor markdown
 
 
 RUN echo "alias ..='cd ..'" >> ~/.bashrc
