@@ -1,6 +1,7 @@
 0.0.19 (in progress)
 - TODO: merge multiple lines in title to one when fetching a paper
 - TODO: run local webserver
+- feature: specify tags when fetching a paper
 - feature: export to HTML (markdown is converted to HTML)
 - markdown (.tmp -> .tmp.md)
 - bugfix: less is confused when showing lines with escape sequences having as many chadc racters as the terminal size
